welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:38: error: ';' expected but ')' found.
setCouleurBrosse(T((i + decalage) % taille)))	
                                            ^